--- a/product.html
+++ b/product.html
@@ -81,7 +81,7 @@
       <!-- end header inner -->
       <!-- end header -->
       <!-- products -->
-      <div  class="products">
+      <div class="products">
          <div class="container">
             <div class="row">
                <div class="col-md-12">
@@ -96,60 +96,67 @@
                      <div class="row">
                         <div class="col-md-4 margin_bottom1">
                            <div class="product_box">
-                              <figure><img src="pics/power-saving-heaters.jpg" alt="#"/></figure>
-                              <h3>Power Saving Heater</h3>
+                              <figure><img src="pics/power-saving-heaters.jpg" alt="" /></figure>
+                              <a href="power_saving_heater.html">
+                                 <h3>Power Saving Heater</h3>
+                              </a>
                            </div>
                         </div>
                         <div class="col-md-4 margin_bottom1">
                            <div class="product_box">
-                              <figure><img src="pics/ceramic-band-heater.jpg" alt="#"/></figure>
-                              <h3>Ceramic Band Heater</h3>
+                              <figure><img src="pics/ceramic-band-heater.jpg" alt="#" /></figure>
+                              <a href = "ceramic_band_heater.html"><h3>Ceramic Band Heater</h3></a>
                            </div>
                         </div>
                         <div class="col-md-4 margin_bottom1">
                            <div class="product_box">
-                              <figure><img src="pics/coil-nozzle-heater.jpg" alt="#"/></figure>
-                              <h3>Coil Nozzle Heater</h3>
+                              <figure><img src="pics/coil-nozzle-heater1.jpg" alt="#" /></figure>
+                              <a href = "coil_nozzle_heater.html"> <h3>Coil Nozzle Heater</h3> </a>
                            </div>
                         </div>
                         <div class="col-md-4 margin_bottom1">
                            <div class="product_box">
-                              <figure><img src="pics/finned-tubular-heaters.jpg" alt="#"/></figure>
-                              <h3>Finned Tubular Heaters</h3>
+                              <figure><img src="pics/finned-tubular-heaters.jpg" alt="#" /></figure>
+                              <a href = "finned_tubular_heater.html"><h3>Finned Tubular Heaters</h3></a>
                            </div>
                         </div>
                         <div class="col-md-4 margin_bottom1">
                            <div class="product_box">
-                              <figure><img src="pics/cartridge-heater-high-density-.jpg" alt="#"/></figure>
-                              <h3>Cartridge Heater High Density</h3>
+                              <figure><img src="pics/cartridge-heater-high-density-.jpg" alt="#" /></figure>
+                              <a href = "high_density_cartridge_heater.html"><h3>Cartridge Heater High Density</h3></a>
                            </div>
                         </div>
                         <div class="col-md-4 margin_bottom1">
                            <div class="product_box">
-                              <figure><img src="pics/low-density-cartridge-heaters.jpg" alt="#"/></figure>
-                              <h3>Low Density Cartridge Heater</h3>
+                              <figure><img src="pics/low-density-cartridge-heaters.jpg" alt="#" /></figure>
+                              <a href="low_density_cartridge_heater.html">
+                                 <h3>Low Density Cartridge Heater</h3>
+                              </a>
                            </div>
                         </div>
                         <div class="col-md-4">
                            <div class="product_box">
-                              <figure><img src="pics/mica-band-heater.jpg" alt="#"/></figure>
-                              <h3>Mica Band Heater</h3>
+                              <figure><img src="pics/mica-band-heater.jpg" alt="#" /></figure>
+                              <a href="mica_band_heater.html">
+                                 <h3>Mica Band Heater</h3>
+                              </a>
                            </div>
                         </div>
                         <div class="col-md-4">
                            <div class="product_box">
-                              <figure><img src="pics/micro-tubular-coil-heater.jpg" alt="#"/></figure>
-                              <h3>Micro Tubular Coil Heater</h3>
+                              <figure><img src="pics/micro-tubular-coil-heater.jpg" alt="#" /></figure>
+                              <a href="micro_tubular_coil_heater.html">
+                                 <h3>Micro Tubular Coil Heater</h3>
+                              </a>
                            </div>
                         </div>
                         <div class="col-md-4">
                            <div class="product_box">
-                              <figure><img src="pics/sealed-mica-nozzle-heater.jpg" alt="#"/></figure>
-                              <h3>Sealed Mica Nozzle Heater</h3>
+                              <figure><img src="pics/sealed-mica-nozzle-heater.jpg" alt="#" /></figure>
+                              <a href="sealed_mica_nozzle.html">
+                                 <h3>Sealed Mica Nozzle Heater</h3>
+                              </a>
                            </div>
-                        </div>
-                        <div class="col-md-12">
-                           <a class="read_more" href="product.html">See More</a>
                         </div>
                      </div>
                   </div>
